tests/dataset/tpc-h/compiler/c/q19.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:21Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:20Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static int contains_list_string(list_string v, char *item) {
  for (int i = 0; i < v.len; i++)
    if (strcmp(v.data[i], item) == 0)
      return 1;
  return 0;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int p_partkey;
  const char *p_brand;
  const char *p_container;
  int p_size;
} part_t;
typedef struct {
  int len;
  part_t *data;
} part_list_t;
part_list_t create_part_list(int len) {
  part_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(part_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_partkey;
  int l_quantity;
  double l_extendedprice;
  double l_discount;
  const char *l_shipmode;
  const char *l_shipinstruct;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static double
    test_Q19_returns_total_revenue_from_qualifying_branded_parts_result;
static void test_Q19_returns_total_revenue_from_qualifying_branded_parts() {
  if (!(test_Q19_returns_total_revenue_from_qualifying_branded_parts_result ==
        2800.0)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  part_t part[] = {(part_t){.p_partkey = 1,
                            .p_brand = "Brand#12",
                            .p_container = "SM BOX",
                            .p_size = 3},
                   (part_t){.p_partkey = 2,
                            .p_brand = "Brand#23",
                            .p_container = "MED BOX",
                            .p_size = 5},
                   (part_t){.p_partkey = 3,
                            .p_brand = "Brand#34",
                            .p_container = "LG BOX",
                            .p_size = 15}};
  int part_len = sizeof(part) / sizeof(part[0]);
  lineitem_t lineitem[] = {(lineitem_t){.l_partkey = 1,
                                        .l_quantity = 5,
                                        .l_extendedprice = 1000.0,
                                        .l_discount = 0.1,
                                        .l_shipmode = "AIR",
                                        .l_shipinstruct = "DELIVER IN PERSON"},
                           (lineitem_t){.l_partkey = 2,
                                        .l_quantity = 15,
                                        .l_extendedprice = 2000.0,
                                        .l_discount = 0.05,
                                        .l_shipmode = "AIR REG",
                                        .l_shipinstruct = "DELIVER IN PERSON"},
                           (lineitem_t){.l_partkey = 3,
                                        .l_quantity = 35,
                                        .l_extendedprice = 1500.0,
                                        .l_discount = 0.0,
                                        .l_shipmode = "AIR",
                                        .l_shipinstruct = "DELIVER IN PERSON"}};
  int lineitem_len = sizeof(lineitem) / sizeof(lineitem[0]);
  list_string revenues = list_string_create(4);
  revenues.data[0] = "SM CASE";
  revenues.data[1] = "SM BOX";
  revenues.data[2] = "SM PACK";
  revenues.data[3] = "SM PKG";
  list_string revenues = list_string_create(4);
  revenues.data[0] = "MED BAG";
  revenues.data[1] = "MED BOX";
  revenues.data[2] = "MED PKG";
  revenues.data[3] = "MED PACK";
  list_string revenues = list_string_create(4);
  revenues.data[0] = "LG CASE";
  revenues.data[1] = "LG BOX";
  revenues.data[2] = "LG PACK";
  revenues.data[3] = "LG PKG";
  list_string revenues = list_string_create(2);
  revenues.data[0] = "AIR";
  revenues.data[1] = "AIR REG";
  list_float tmp1 = list_float_create(lineitem.len * part.len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < lineitem_len; tmp3++) {
    lineitem_t l = lineitem[tmp3];
    for (int tmp4 = 0; tmp4 < part_len; tmp4++) {
      part_t p = part[tmp4];
      if (!(p.p_partkey == l.l_partkey)) {
        continue;
      }
      if (!(contains_list_string(
                revenues, ((((strcmp(p.p_brand, "Brand#12") == 0)) &&
                            (contains_list_string(revenues, p.p_container)) &&
                            (l.l_quantity >= 1 && l.l_quantity <= 11) &&
                            (p.p_size >= 1 && p.p_size <= 5)) ||
                           (((strcmp(p.p_brand, "Brand#23") == 0)) &&
                            (contains_list_string(revenues, p.p_container)) &&
                            (l.l_quantity >= 10 && l.l_quantity <= 20) &&
                            (p.p_size >= 1 && p.p_size <= 10)) ||
                           (((strcmp(p.p_brand, "Brand#34") == 0)) &&
                            (contains_list_string(revenues, p.p_container)) &&
                            (l.l_quantity >= 20 && l.l_quantity <= 30) &&
                            (p.p_size >= 1 && p.p_size <= 15))) &&
                              l.l_shipmode) &&
            l.l_shipinstruct == "DELIVER IN PERSON")) {
        continue;
      }
      tmp1.data[tmp2] = l.l_extendedprice * (1 - l.l_discount);
      tmp2++;
    }
  }
  tmp1.len = tmp2;
  list_float revenues = tmp1;
  double result = _sum_float(revenues);
  _json_float(result);
  test_Q19_returns_total_revenue_from_qualifying_branded_parts_result = result;
  test_Q19_returns_total_revenue_from_qualifying_branded_parts();
  return 0;
}
